[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://CoreCreationConsole.gd" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)

[node name="CreationConsole" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.3
theme_override_styles/panel = SubResource(1)
script = ExtResource(1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputDisplay" type="RichTextLabel" parent="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
size_flags_horizontal = 3

[node name="InputField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
placeholder_text = "Enter a word or command..."

[node name="HistoryButton" type="Button" parent="VBoxContainer/HBoxContainer"]
text = "History"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
text = "Clear"